[package]
name = "ditto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
hex = "0.4.3"
inventory = "0.3.24"
reqwest = { version = "0.13.4", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
skia-safe = "0.99.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
warp = { version = "0.4.3", features = ["server"] }
